<resources>
    <string name="app_name">TravelTaipei</string>
    <string name="travel_taipei">Travel Taipei</string>
    <string name="news">News</string>
    <string name="attractions">Attractions</string>
    <string name="address">address</string>
    <string name="tel">tel</string>
    <string name="official_site">official site</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_zh_tw" translatable="false">繁體中文</string>
    <string name="language_zh_cn" translatable="false">简体中文</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_ja" translatable="false">日本语</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_es" translatable="false">Español</string>
    <string name="language_id" translatable="false">Indonesia</string>
    <string name="language_vi" translatable="false">Tiếng Việt</string>
    <string name="total_attractions">total attractions</string>
    <string name="open_time">open time</string>
    <string name="failed_to_load_data">failed to load data</string>
    <string name="no_data">No Data</string>

</resources>