<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_item_news"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_item_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/choose_language" />

    <LinearLayout
        android:id="@+id/ll_language_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_language_zh_tw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/language_zh_tw" />

        <TextView
            android:id="@+id/tv_item_language_zh_cn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/language_zh_cn" />

        <TextView
            android:id="@+id/tv_item_language_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/language_en" />

    </LinearLayout>

</LinearLayout>