<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AttractionDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            tools:text="@string/attractions"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_photo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="5:4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_open_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_rounded_bg"
                android:padding="6dp"
                android:layout_marginTop="6dp"
                android:textSize="20sp"
                tools:text="@string/open_time"/>

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_rounded_bg"
                android:padding="6dp"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textColor="@color/blue_primary"
                tools:text="@string/address"/>

            <TextView
                android:id="@+id/tv_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_rounded_bg"
                android:padding="6dp"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textColor="@color/blue_primary"
                tools:text="@string/tel"/>

            <TextView
                android:id="@+id/tv_official_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_rounded_bg"
                android:padding="6dp"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textColor="@color/blue_primary"
                tools:text="@string/official_site"/>

            <TextView
                android:id="@+id/tv_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_rounded_bg"
                android:padding="6dp"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                tools:text="內文內文內文內文內文內文內文內文內文內文內文"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>